--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,41 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+
+
+html{
+  scroll-behavior: smooth;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer base {
+  body {
+    @apply bg-[#AEA397] text-[#303030] tracking-wide
   }
-}
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6, {
+    @apply font-bold font-mono;
+  }
+p{
+  @apply  font-mono;
+}
+  h1 {
+    @apply  font-mono font-bold  text-4xl sm:text-5xl md:text-6xl
+  }
+
+  h2 {
+    @apply  font-mono font-bold  text-3xl sm:text-4xl
+  }
+
+  li {
+    @apply cursor-pointer
+  }
+
+  button {
+    @apply shadow-lg shadow-[#3C3C3C] rounded-xl font-mono bg-gradient-to-r from-[#cbc2b8] to-[#aea397] text-white
+  }
 }
