--- a/app/globals.css
+++ b/app/globals.css
@@ -2,43 +2,36 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
-html{
+html {
   scroll-behavior: smooth;
 }
 
 @layer base {
   body {
-    @apply bg-[#AEA397] text-[#303030] tracking-wide
+    @apply bg-[#000000] text-[#303030] tracking-wide;
   }
 
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6, {
+  h1, h3{
     @apply font-bold font-mono;
   }
-p{
-  @apply  font-mono;
-}
+
+  p {
+    @apply font-mono;
+  }
+
   h1 {
-    @apply  font-mono font-bold  text-4xl sm:text-5xl md:text-6xl
+    @apply font-mono text-[#FFFF] font-bold text-4xl sm:text-5xl md:text-6xl;
   }
 
   h2 {
-    @apply  font-mono font-bold  text-3xl sm:text-4xl
+    @apply font-mono text-2xl sm:text-4xl;
   }
 
   li {
-    @apply cursor-pointer
+    @apply cursor-pointer;
   }
 
   button {
-    @apply text-[#3C3C3C] shadow-lg shadow-[#3C3C3C] rounded-xl font-mono bg-gradient-to-r from-[#cbc2b8] to-[#aea397]
+    @apply text-[#3C3C3C] shadow-lg shadow-[#3C3C3C] rounded-xl font-mono bg-gradient-to-r from-[#99AEAD] to-[#99AEAD];
   }
 }
-
-
