--- a/app/globals.css
+++ b/app/globals.css
@@ -15,16 +15,16 @@ html {
     @apply font-bold font-mono;
   }
 
-  p {
+  /* p {
     @apply font-mono;
-  }
+  } */
 
   h1 {
     @apply font-mono text-[#FFFF] font-bold text-4xl sm:text-5xl md:text-6xl;
   }
 
   h2 {
-    @apply font-mono text-2xl sm:text-4xl;
+    @apply font-mono font-bold text-2xl sm:text-4xl;
   }
 
   li {
@@ -43,3 +43,4 @@ label{
 input{
   @apply font-mono;
 }
+
